--- a/app/src/main/res/drawable-xhdpi/border_tips.xml
+++ b/app/src/main/res/drawable-xhdpi/border_tips.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <solid android:color="#9a9a9a" />
-    <stroke android:width="1dip" android:color="#4fa5d5"/>
+    <stroke android:width="1dp" android:color="#4fa5d5"/>
     <corners
         android:bottomLeftRadius="3dp"
         android:bottomRightRadius="3dp"
