--- a/app/src/main/res/layout/activity_car_fail_info.xml
+++ b/app/src/main/res/layout/activity_car_fail_info.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_fail_info"
         android:layout_marginTop="30dp"
+        android:padding="10dp"
         android:background="@drawable/border_tips"
         android:layout_centerHorizontal="true">
         <ImageView
@@ -49,9 +50,11 @@
             android:text="提示内容"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:textSize="@dimen/tv_info_size"
             android:id="@+id/tv_fail_tips"
             android:layout_below="@+id/tv_tips_title"
+            android:lineSpacingMultiplier="1.2"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
@@ -65,6 +68,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/rl_tips"
         android:layout_marginTop="30dp"
+        android:padding="10dp"
+        android:background="@drawable/border_tips"
         android:layout_centerHorizontal="true">
         <ImageView
             android:layout_width="wrap_content"
@@ -79,6 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/tv_info_size"
+            android:textColor="@android:color/holo_red_light"
             android:id="@+id/tv_notice_title"
             android:layout_toRightOf="@+id/iv_notice"
             android:layout_alignParentTop="true" />
@@ -87,6 +93,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_notice_title"
+            android:layout_marginTop="5dp"
+            android:lineSpacingMultiplier="1.2"
             android:textSize="@dimen/tv_info_size"
             android:id="@+id/tv_fail_notice" />
     </RelativeLayout>
@@ -94,6 +102,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:background="@color/colorbackgroud"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true">
         <Button
