--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -1,19 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="50dp">
 
     <TextView
         android:text="TextView"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:id="@+id/tv_code"
-        android:layout_weight="1" />
+        android:textSize="@dimen/tv_info_size"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:gravity="left|center_vertical" />
+
+
 
     <TextView
-        android:text="TextView"
+        android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:id="@+id/tv_content"
-        android:layout_weight="3" />
-</LinearLayout>
+        android:id="@+id/tv_info"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textSize="@dimen/tv_info_size"
+        android:layout_marginRight="10dp"
+        android:gravity="left|center_vertical"
+        android:layout_toRightOf="@+id/tv_code"
+        android:layout_alignRight="@+id/imageView"
+        android:layout_alignEnd="@+id/imageView" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:src="@mipmap/em_ic_right_arrow"
+        android:layout_marginRight="50dp"
+        android:id="@+id/imageView"
+        android:layout_alignParentRight="true"/>
+</RelativeLayout>
