--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorbackgroud">#00bcd4</color>
-
+    <color name="colorfailtitle">#f5ce0f</color>
 </resources>
