--- a/app/src/main/res/layout/activity_car_fail_info.xml
+++ b/app/src/main/res/layout/activity_car_fail_info.xml
@@ -61,6 +61,7 @@
 
         <TextView
             android:text="提示"
+            android:textColor="@color/colorbackgroud"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/tv_info_size"
