--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -32,7 +32,7 @@
         android:layout_centerHorizontal="true"
         android:layout_margin="@dimen/activity_vertical_margin"
         android:padding="5dp"
-        android:background="@color/colorfailtitle"
+        android:background="@color/colorbackgroud"
         android:id="@+id/tv_fail_list_title" />
     <ListView
         android:id="@+id/listViewFail"
@@ -53,7 +53,7 @@
         android:layout_centerHorizontal="true"
         android:layout_margin="@dimen/activity_vertical_margin"
         android:padding="5dp"
-        android:background="@color/colorfailtitle"
+        android:background="@color/colorbackgroud"
         android:id="@+id/tv_local_title"/>
 
     <RelativeLayout
