--- a/app/src/main/res/layout/activity_car_fail_info.xml
+++ b/app/src/main/res/layout/activity_car_fail_info.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_car_fail_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/bg"
     tools:context="demo.zhangxu.zhangxudemo.activity.CarFailInfoActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -28,6 +29,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/abl"
         android:layout_above="@+id/rl_button"
+        android:layout_marginRight="100dp"
         android:layout_marginBottom="5dp">
 
 
@@ -35,7 +37,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
+        <RelativeLayout
+            android:id="@+id/rl_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:layout_marginRight="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:padding="10dp"
+            android:background="@drawable/border_tips"
+            android:layout_centerHorizontal="true">
     <TextView
+        android:text="—检查进气压力温度传感器插头是否松动、脱落或损坏；线束是否损坏。"
+        android:textColor="@color/colorfailtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -46,49 +60,29 @@
         android:lineSpacingMultiplier="1.5"
         android:id="@+id/tv_fail_info"
         />
-
+</RelativeLayout>
     <RelativeLayout
         android:id="@+id/rl_tips"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_vertical_margin"
         android:layout_marginRight="@dimen/activity_vertical_margin"
-        android:layout_below="@+id/tv_fail_info"
+        android:layout_below="@+id/rl_info"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:padding="10dp"
         android:background="@drawable/border_tips"
         android:layout_centerHorizontal="true">
 
         <TextView
-            android:text="提示"
-            android:textColor="@color/colorbackgroud"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/tv_info_size"
-            android:id="@+id/tv_tips_title"
-            android:layout_toRightOf="@+id/iv_tips"
-            android:layout_marginLeft="5dp"
-            android:layout_alignParentTop="true" />
-
-        <TextView
-            android:text="提示内容"
+            android:text="—检查进气压力温度传感器插头是否松动、脱落或损坏；线束是否损坏。"
+            android:textColor="@color/colorfailtitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textSize="@dimen/tv_info_size"
             android:id="@+id/tv_fail_tips"
-            android:layout_below="@+id/tv_tips_title"
             android:lineSpacingMultiplier="1.2"
             android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="?android:attr/alertDialogIcon"
-            android:id="@+id/iv_tips"
-            android:layout_above="@+id/tv_fail_tips"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -108,33 +102,15 @@
         android:layout_centerHorizontal="true">
 
         <TextView
-            android:text="注意"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/tv_info_size"
-            android:textColor="@android:color/holo_red_light"
-            android:id="@+id/tv_notice_title"
-            android:layout_toRightOf="@+id/iv_notice"
-            android:layout_marginLeft="5dp"
-            android:layout_alignParentTop="true" />
-        <TextView
-            android:text="注意事项"
+            android:text="—拔下传感器插头，检查传感器管脚是否损坏/腐蚀，重新连接传感器插头。"
+            android:textColor="@color/colorfailtitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_notice_title"
             android:layout_marginTop="5dp"
             android:lineSpacingMultiplier="1.2"
             android:textSize="@dimen/tv_info_size"
             android:id="@+id/tv_fail_notice" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="?android:attr/alertDialogIcon"
-            android:id="@+id/iv_notice"
-            android:layout_above="@+id/tv_fail_notice"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
 
@@ -147,18 +123,6 @@
         android:layout_marginBottom="5dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true">
-
-        <Button
-            android:text="@string/info_btn_help"
-            android:textSize="@dimen/btn_info_size"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginRight="@dimen/activity_vertical_margin"
-            android:gravity="center"
-            android:layout_alignParentRight="true"
-            android:textColor="@android:color/white"
-            android:background="@drawable/border_button"
-            android:id="@+id/btn_help" />
 
 
         <Button
@@ -198,4 +162,41 @@
             android:layout_toRightOf="@+id/btn_component"/>
 
     </RelativeLayout>
+
+    <Button
+        android:text="@string/info_btn_help"
+        android:textSize="@dimen/btn_info_size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:background="@drawable/border_button"
+        android:id="@+id/btn_help"
+        android:layout_below="@+id/abl"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:srcCompat="@mipmap/a1"
+        android:layout_below="@+id/btn_help"
+        android:layout_alignRight="@+id/btn_help"
+        android:layout_alignEnd="@+id/btn_help"
+        android:layout_marginRight="26dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginTop="20dp"
+        android:id="@+id/imageView" />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:srcCompat="@mipmap/a3"
+        android:layout_below="@+id/imageView"
+        android:layout_alignRight="@+id/imageView"
+        android:layout_alignEnd="@+id/imageView"
+        android:layout_marginTop="20dp"
+        android:id="@+id/imageView2" />
 </RelativeLayout>
