--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/bg"
     tools:context="demo.zhangxu.zhangxudemo.activity.MainActivity">
     <android.support.design.widget.AppBarLayout
         android:id="@+id/abl"
