--- a/app/src/main/res/layout/content_image_view.xml
+++ b/app/src/main/res/layout/content_image_view.xml
@@ -5,6 +5,7 @@
     android:id="@+id/rl_image_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginRight="100dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="demo.zhangxu.zhangxudemo.activity.ImageViewActivity"
     tools:showIn="@layout/activity_image_view">
@@ -12,6 +13,7 @@
 
     <demo.zhangxu.zhangxudemo.utils.DragImageView
         android:id="@+id/iv_zoom"
+        android:layout_marginRight="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_vertical_margin"
