--- a/app/src/main/res/layout/item_help.xml
+++ b/app/src/main/res/layout/item_help.xml
@@ -4,29 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="50dp">
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:id="@+id/tv_code"
-        android:textSize="@dimen/tv_info_size"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:gravity="left|center_vertical" />
+    <!--<TextView-->
+        <!--android:text="TextView"-->
+        <!--android:layout_width="200dp"-->
+        <!--android:layout_height="50dp"-->
+        <!--android:id="@+id/tv_code"-->
+        <!--android:textSize="@dimen/tv_info_size"-->
+        <!--android:maxLines="1"-->
+        <!--android:ellipsize="end"-->
+        <!--android:gravity="left|center_vertical" />-->
 
 
 
     <TextView
         android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:id="@+id/tv_info"
+        android:textColor="@android:color/white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="5dp"
+        android:id="@+id/tv_title"
         android:maxLines="1"
         android:ellipsize="end"
         android:textSize="@dimen/tv_info_size"
         android:layout_marginRight="10dp"
-        android:gravity="left|center_vertical"
-        android:layout_toRightOf="@+id/tv_code"/>
+        android:gravity="left|center_vertical"/>
 
 
 </RelativeLayout>
