--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -67,26 +67,23 @@
     </RelativeLayout>
 
     <Spinner
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorbackgroud"
         android:id="@+id/spinner_province"
         android:layout_marginLeft="@dimen/activity_vertical_margin"
         android:layout_below="@+id/tv_local_title" />
 
     <Spinner
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorbackgroud"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_marginLeft="@dimen/activity_vertical_margin"
         android:id="@+id/spinner_city"
         android:layout_below="@+id/spinner_province" />
 
     <Spinner
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorbackgroud"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_marginLeft="@dimen/activity_vertical_margin"
         android:layout_below="@+id/spinner_city"
@@ -105,17 +102,27 @@
         <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
         <!--android:layout_toRightOf="@+id/tv_fail_list_title"-->
         <!--android:layout_toEndOf="@+id/tv_fail_list_title" />-->
-
+<include
+    android:id="@+id/title"
+    layout="@layout/item_address_title"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginRight="@dimen/activity_vertical_margin"
+    android:layout_marginLeft="@dimen/activity_vertical_margin"
+    android:layout_below="@+id/tv_local_title"
+    android:layout_toRightOf="@+id/tv_fail_list_title"
+    android:layout_toEndOf="@+id/tv_fail_list_title"></include>
     <ListView
         android:id="@+id/listViewAdrress"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginRight="@dimen/activity_vertical_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_below="@+id/tv_local_title"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/title"
         android:layout_marginLeft="@dimen/activity_vertical_margin"
         android:layout_centerHorizontal="true"
         android:layout_toRightOf="@+id/tv_fail_list_title"
         android:layout_toEndOf="@+id/tv_fail_list_title"
-        android:layout_above="@+id/rl_button" />
+        android:layout_above="@+id/rl_button"
+        android:background="@android:color/white"/>
 </RelativeLayout>
