--- a/app/src/main/res/layout/activity_image_view.xml
+++ b/app/src/main/res/layout/activity_image_view.xml
@@ -59,15 +59,15 @@
         android:layout_marginRight="26dp"
         android:layout_marginEnd="26dp"
         android:layout_marginTop="20dp"
-        android:id="@+id/imageView" />
+        android:id="@+id/iv_info" />
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:srcCompat="@mipmap/a3"
-        android:layout_below="@+id/imageView"
-        android:layout_alignRight="@+id/imageView"
-        android:layout_alignEnd="@+id/imageView"
+        android:layout_below="@+id/iv_info"
+        android:layout_alignRight="@+id/iv_info"
+        android:layout_alignEnd="@+id/iv_info"
         android:layout_marginTop="20dp"
         android:id="@+id/imageView2" />
 </RelativeLayout>
